fix(ui): Fix free-to-use amount wrapping on mobile

--- a/interface/src/components/Typography.module.scss
+++ b/interface/src/components/Typography.module.scss
@@ -106,3 +106,7 @@
   padding-right: 1.5 * variables.$size;
   border-radius: var(--border-radius);
 }
+
+.noWrap {
+  text-wrap-mode: nowrap;
+}
